wip: deleted unused method POST and its route
