# docs/swagger.yaml
@@ -1,15 +1,5 @@
 basePath: /
 definitions:
-  models.NewSongRequest:
-    properties:
-      group:
-        type: string
-      song:
-        type: string
-    required:
-    - group
-    - song
-    type: object
   models.Song:
     properties:
       created_at:
@@ -95,33 +85,6 @@ paths:
           schema:
             type: string
       summary: Get all songs
-    post:
-      consumes:
-      - application/json
-      description: Add a new song to the library
-      parameters:
-      - description: Song data
-        in: body
-        name: song
-        required: true
-        schema:
-          $ref: '#/definitions/models.NewSongRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.Song'
-        "400":
-          description: invalid input
-          schema:
-            type: string
-        "500":
-          description: internal server error
-          schema:
-            type: string
-      summary: Add a new song
   /songs/{id}:
     delete:
       description: Delete a song by its ID
